--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.1",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
